scss/elements/_forms.scss
/* ... */
// Field errors
//
// To display field errors:
//   - Add the has-error class to the form-group
//   - Replace the help text with the error message
// 
// Example:
// <div class="form-group has-error">
//   <label for="inputError1">Email</label>
//   <input type="text" id="inputError1" value="email.com">
//   <span class="helpBlock">Invalid Email Address</span>
// </div>
//
// Styleguide fieldErrors

.form-group {
  &.has-success {
    .form-control, label, .helpBlock, .input-control {
      border-color: $state-success-border;
      color: $state-success-text;
  }
  }
  &.has-warning {
   .form-control, label, .helpBlock, .input-control {
     border-color: $state-warning-border;
     color: $state-warning-text; }
  }
  &.has-error {
    .form-control, label, .helpBlock, .input-control {
      border-color: $state-danger-border;
      color: $state-danger-text;
    }
    .helpBlock {
      i {
        padding: 0 5px 0 0;
      }
    }
  }
}

.bg-teal, .bg-plum {
  .form-group.has-error {
    .helpBlock {
      background: $white;
      padding: 4px 16px;
      margin-top: 0;
    }
  }
}



.helpBlock {
  display: block;
  margin-top: 4px;
  font-size: $font-size-tiny;
}

.helpBlock-radio {
  margin-left: 24px;
  margin-top: 0;
}

.helpList {
  margin-left: 24px;
  font-size: $font-size-tiny;
  list-style-type: disc;
  list-style-position: inside;
}

// Fieldsets
//
// Use fieldsets to group related fields in a form together.  This can help simplify forms with lots of inputs.  Use the legend element to provide a header.  Use `.fieldsetHelpBlock` to display help for the fieldset. Don't forget to place a `div.fieldset-footer` or else you will end up with a form that has no border at the bottom
//
// Example:
// <form>
//   <fieldset>
//     <legend><h3>Personal information</h3></legend>
//     <div class="form-group">
//       <label for="name">Name</label>
//       <input type="text" id="name">
//     </div>
//     <div class="form-group">
//       <label for="email">Email</label>
//       <input type="text" id="email">
//     </div>
//     <div class="form-group">
//       <label for="phone_number">Phone number</label>
//       <input type="text" id="phone_number">
//     </div>
//   </fieldset>
//   <fieldset>
//     <legend><h3>Account information</h3></legend>
//     <div class="fieldsetHelpBlock">Details for your Amara acount</div>
//     <div class="form-group">
//       <label for="username">Username</label>
//       <input type="text" id="username">
//     </div>
//     <div class="form-group">
//       <label for="password1">Password</label>
//       <input type="text" id="password1">
//     </div>
//     <div class="form-group">
//       <label for="password2">Confirm password</label>
//       <input type="text" id="password2">
//     </div>
//   </fieldset>
//   <div class="form-actions fieldset-footer">
//     <button class="button borderless">Cancel</button>
//     <button type="submit" class="button cta">Submit</button>
//   </div>
// </form>
//
// Styleguide fieldsets

fieldset {
  border: solid 1px #cccccc;
  border-top: none;
  border-bottom: none;

  legend {
    padding-top: 15px;
    padding-left: 20px;
    margin-bottom: 30px;
    height: 55px;
    background-color: $plum;
    border-bottom: none;
    color: $cream;

    h3 {
      color: $cream !important;
    }
  }

  .form-group:last-of-type {
    margin-bottom: 45px;
  }
}

fieldset > :not(legend) {
  margin-left: 20px;
  margin-right: 20px;
}

.fieldset-footer {
  border: solid 1px #cccccc;
  border-top: none;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 10px;
  padding-bottom: 6px;
}

.fieldset-footer-shadow {
  @extend .fieldset-footer;
  background-color: #f4f4f7;
  display: flex;
  color: #9fa0a1;
}

.fieldset-backtotop-container {
  display: flex;
  align-items: center;
  margin-right: auto;
  cursor: pointer;
}

.fieldset-backtotop-container:hover > .small {
  text-decoration: underline;
}

.fieldset-backtotop-chevron {
  color: #c6c6c7;
  margin-right: 6px;
}

.fieldsetHelpBlock {
  margin-top: 0px;
  font-size: $font-size-tiny;
  color: $charcoal;
  margin-bottom: 16px;
  font-style: italic;
}

.buttonFile {
  text-transform: none;
  font-family: $font-family-sans-serif;
}

.saveChangesButton {
  visibility: hidden;
}

.imageInput-previewContainer {
  background: url("../img/image-upload-bg.png");
  margin: 4px 0 16px 0;
}

.imageInput-thumbnail {
  max-width: 100%;
  max-height: 100%;
  object-fit: contain;
}

.imageInput-input {
  position: relative;
}

.imageInput-buttonContainer {
  position: relative;
}

.imageInput-fileInput {
  z-index: $z-index-front;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  opacity: 0;
  padding: 0;
  margin: 0;
  border: 0;
  filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
}

.imageInput-displayedInput {
  position: absolute;
}

@import "compound_field";
@import "button_field";

